src/objects/Invoice_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Contracts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts</label>
        <referenceTo>Contracts__c</referenceTo>
        <relationshipLabel>Invoice Contract</relationshipLabel>
        <relationshipName>Invoice_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Invoice_No__c</fullName>
        <label>Full Invoice No</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoive_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Invoive Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Invoice Contract</label>
    <nameField>
        <label>Invoice Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Contract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>